--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,9 @@ services:
       - key: WEBAPP_URL
         value: "https://f-h88c.onrender.com"
         sync: false
+      - key: ADMIN_SECRET
+        value: ""
+        sync: false
       - key: CSS_TRANSFORMER_WASM
         value: "0"
         sync: false
