--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
           "wouter": "^3.3.5",
           "ws": "^8.18.0",
           "zod": "^3.24.2",
-          "zod-validation-error": "^3.4.0"
+          "zod-validation-error": "^3.4.0",
+          "mongodb": "^5.7.0"
     },
     "devDependencies": {
           "@replit/vite-plugin-cartographer": "^0.4.4",
@@ -99,7 +100,8 @@
           "tailwindcss": "^3.4.17",
           "tsx": "^4.21.0",
           "typescript": "5.6.3",
-          "vite": "^7.3.0"
+          "vite": "^7.3.0",
+          "@types/mongodb": "^5.0.0"
     },
     "overrides": {
           "drizzle-kit": {
