--- a/render.yaml
+++ b/render.yaml
@@ -2,12 +2,15 @@ services:
   - type: web
     name: ton-frog-jump
     env: node
-    buildCommand: npm ci --include=dev && npm run db:push && npm run build
+    buildCommand: npm ci --include=dev && npm run build
     startCommand: npm run start
     envVars:
       - key: NODE_ENV
         value: production
-      - key: DATABASE_URL
+      - key: MONGO_URL
+        sync: false
+      - key: MONGO_DB_NAME
+        value: "frog"
         sync: false
       - key: BOT_TOKEN
         sync: false
