--- a/render.yaml
+++ b/render.yaml
@@ -2,15 +2,12 @@ services:
   - type: web
     name: ton-frog-jump
     env: node
-    buildCommand: npm ci --include=dev && npm run build
+    buildCommand: npm ci --include=dev && npm run db:push && npm run build
     startCommand: npm run start
     envVars:
       - key: NODE_ENV
         value: production
-      - key: MONGO_URL
-        sync: false
-      - key: MONGO_DB_NAME
-        value: "frog"
+      - key: DATABASE_URL
         sync: false
       - key: BOT_TOKEN
         sync: false
